--- a/app/globals.css
+++ b/app/globals.css
@@ -42,39 +42,50 @@
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
+  /** Base Colors **/
+  --background: #fff; /* --color-white */
+  --popular_searches: #707070; /* --color-white */
+  --foreground: oklch(0.28 0 0); /* --color-zinc-950 */
+  --header-text: #111928; /* --color-zinc-950 */
+  --card: #fff; /* --color-white */
+  --card-border: 1px solid #DBDCDD33;
+  --card-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.078);
+  --card-foreground: #292929; /* --color-zinc-950 */
+  --footer-upper-foreground: #292929; /* --color-zinc-950 */
+  --popover: oklch(1 0 0); /* --color-white */
+  --popover-foreground: oklch(14.1% 0.005 285.823); /* --color-zinc-950 */
+  --primary: #004C8F; /* --color-blue-500 */
+  --primary-foreground: oklch(1 0 0); /* --color-white */
+  --secondary: oklch(96.7% 0.003 264.542); /* --color-zinc-100 */
+  --secondary-foreground: oklch(21% 0.006 285.885); /* --color-zinc-900 */
+  --muted: oklch(96.7% 0.003 264.542); /* --color-zinc-100 */
+  --muted-foreground: oklch(55.2% 0.016 285.938); /* --color-zinc-500 */
+  --accent: oklch(96.7% 0.003 264.542); /* --color-zinc-100 */
+  --accent-foreground: oklch(21% 0.006 285.885); /* --color-zinc-900 */
+  --destructive: oklch(57.7% 0.245 27.325); /* --color-red-600 */
+  --destructive-foreground: #ffffff; /* --color-white */
+  --tab-paragraph-color: #090909;
+  /** Base Styles **/
+  --border: #2929291A; /* between --color-zinc-100 and --color-zinc-200 */
+  --input: oklch(92% 0.004 286.32); /* --color-zinc-200 */
+  --ring: oklch(87.1% 0.006 286.286); /* --color-zinc-400 */
+  --radius: 0.5rem;
+  --blue-border: #004C8F80;
+  --bg-bluish-gray: #F6F7FB;
+  --dark-blue: #05144b;
+  --royal-blue: #004C8F;
+  --circle-check: #31C48D;
+  --footer-color: #535353;  
+  --sky-blue: #7EBAFF33;
+  --bg-royal-blue: #e6f1fb;
+  --bg-grey: #f3f3f3;
+  --lower-footer: #fff;
+  --royal-blue-dark: #004C8F;
+  --light-sky-blue: #f0f6fb;
+  /** Font Scale Variables **/
+  --font-scale-multiplier: 1;
   --font-sans: 'Open Sans', sans-serif;
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+   --light-sky-blue-popular-searches: #fff;
 }
 
 .dark {
@@ -117,5 +128,21 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+/** Custom Scrollbar **/
+@layer base {
+  ::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+      background: #e5e7eb;
+      border-radius: .625rem;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #004c8f;
+    border-radius: .625rem;
   }
 }
