--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -39,7 +39,7 @@
 }
 @media(max-width: 1024px){
     .hdfc_logo{
-        width: 150px!important;;
+        width: 150px!important;
     }
 }
 @media(max-width: 992px){
